--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
     <title>Pizzeria Dela Hoya</title>
 
 
- <!--Bootstrap CSS-->
+    <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
@@ -16,15 +17,107 @@
     <link rel="stylesheet" href="index.css" type="text/css" />
 
     <!-- JS Sripts-->
-     <script src="https://code.jquery.com/jquery-3.6.0.js"
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
 
 
 </head>
+
 <body>
-    <header>
-        
-    </header>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col bg-gradient">
+                <h1 class="text-dark text-center text-uppercase fw-bolder">Pizzeria Dela Hoya</h1>
+                <h2 class="text-dark text-center">Hand tossed Italian goodness</h2>
+                <p class="text-center fst-italic fw-bold">the right slice at the right price</p>
+
+            </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 ps-5 pe-5">
+            <div class="col">
+                <div class="card">
+                    <img src="https://user-images.githubusercontent.com/66039545/159031318-18cf5787-5cdf-466b-9849-f09887368c30.jpg"
+                     alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">Pizzeria</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Choose Pizza Size Below</small>
+                    </div>
+                </div>
+                 <ul class="list-group mt-2">
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Small - Kes. 500
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Medium - Kes. 800
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Large - Kes. 1000
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <div class="card ">
+                    <img src="https://user-images.githubusercontent.com/66039545/159019716-b9723802-2898-4e52-b368-a635fac31165.jpg"
+                         alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">Crust</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Choose Crust Type Below</small>
+                    </div>
+                </div>
+                 <ul class="list-group mt-2">
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Crispy
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                         Stuffed
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Gluten-free
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="https://user-images.githubusercontent.com/66039545/159020476-db835b82-b4a1-4611-b9ed-f391e829e50c.jpg"
+                         alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">Toppings</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Choose Toppings Below</small>
+                    </div>
+                </div>
+                 <ul class="list-group mt-2">
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Sausages
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                       Onions
+                    </li>
+                    <li class="list-group-item">
+                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        Mushrooms
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
