git commit fixed image size for toppings and added prices

--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
                         <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                        Crispy
+                        Crispy - Kes. 300
                     </li>
                     <li class="list-group-item">
                         <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                         Stuffed
+                         Stuffed - Kes. 500
                     </li>
                     <li class="list-group-item">
                         <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                        Gluten-free
+                        Gluten-free - Kes. 700
                     </li>
                 </ul>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://user-images.githubusercontent.com/66039545/159020476-db835b82-b4a1-4611-b9ed-f391e829e50c.jpg"
+                    <img src="https://user-images.githubusercontent.com/66039545/159033632-6ada4123-6c89-4f9a-825c-a239198ef5ae.jpg"
                          alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-dark">Toppings</h5>
@@ -102,15 +102,15 @@
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
                         <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                        Sausages
+                        Sausages - Kes. 150
                     </li>
                     <li class="list-group-item">
                         <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                       Onions
+                       Onions - Kes. 100
                     </li>
                     <li class="list-group-item">
                         <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                        Mushrooms
+                        Mushrooms - Kes. 200
                     </li>
                 </ul>
             </div>
