--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col bg-gradient">
-                <h1 class="text-dark text-center text-uppercase fw-bolder">Pizzeria Dela Hoya</h1>
-                <h2 class="text-dark text-center">Hand tossed Italian goodness</h2>
+                <h1 class="text-center text-uppercase fw-bolder">Pizzeria Dela Hoya</h1>
+                <h2 class="text-center fw-bold">Hand tossed Italian goodness</h2>
                 <p class="text-center fst-italic fw-bold">the right slice at the right price</p>
 
             </div>
@@ -49,7 +49,7 @@
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="" checked aria-label="...">
                         Small - Kes. 500
                     </li>
                     <li class="list-group-item">
@@ -115,6 +115,9 @@
                 </ul>
             </div>
         </div>
+        <div class="d-flex justify-content-center">
+        <input class="btn btn-primary mx-auto mt-5" type="submit" value="Place Order">
+    </div>
 
     </div>
 
