git commit will add value to input type and jqeury file to js folder

--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
                     <img src="https://user-images.githubusercontent.com/66039545/159031318-18cf5787-5cdf-466b-9849-f09887368c30.jpg"
                      alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-dark">Pizzeria</h5>
+                        <h5 class="card-title text-dark">Pizza</h5>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Choose Pizza Size Below</small>
+                        <small class="text-muted">It's not just pizza but also a taste of greatness made by top notch Italian chefs </small>
                     </div>
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" checked aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="500" checked aria-label="...">
                         Small - Kes. 500
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="800" aria-label="...">
                         Medium - Kes. 800
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="1000" aria-label="...">
                         Large - Kes. 1000
                     </li>
                 </ul>
@@ -75,15 +75,15 @@
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="300" aria-label="...">
                         Crispy - Kes. 300
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="500" aria-label="...">
                          Stuffed - Kes. 500
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="700" aria-label="...">
                         Gluten-free - Kes. 700
                     </li>
                 </ul>
@@ -101,15 +101,15 @@
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="150" aria-label="...">
                         Sausages - Kes. 150
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="100" aria-label="...">
                        Onions - Kes. 100
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="200" aria-label="...">
                         Mushrooms - Kes. 200
                     </li>
                 </ul>
