git commit will add checkout page and label to selections

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="500" checked aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="500" checked aria-label="small">
                         Small - Kes. 500
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="800" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="800" aria-label="medium">
                         Medium - Kes. 800
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="1000" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="1000" aria-label="large">
                         Large - Kes. 1000
                     </li>
                 </ul>
@@ -70,20 +70,20 @@
                         <h5 class="card-title text-dark">Crust</h5>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Choose Crust Type Below</small>
+                        <small class="text-muted">Check out our selection of delicious crispy pan crust frozen pizzas.</small>
                     </div>
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="300" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="300" aria-label="crispy">
                         Crispy - Kes. 300
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="500" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="500" aria-label="stuffed">
                          Stuffed - Kes. 500
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="700" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="700" aria-label="gluten-free">
                         Gluten-free - Kes. 700
                     </li>
                 </ul>
@@ -96,27 +96,27 @@
                         <h5 class="card-title text-dark">Toppings</h5>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Choose Toppings Below</small>
+                        <small class="text-muted">Our pizza come with a selection toppings to match your crust!</small>
                     </div>
                 </div>
                  <ul class="list-group mt-2">
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="150" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="150" aria-label="sausages">
                         Sausages - Kes. 150
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="100" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="100" aria-label="onions">
                        Onions - Kes. 100
                     </li>
                     <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="200" aria-label="...">
+                        <input class="form-check-input me-1" type="checkbox" value="200" aria-label="mushrooms">
                         Mushrooms - Kes. 200
                     </li>
                 </ul>
             </div>
         </div>
         <div class="d-flex justify-content-center">
-        <input class="btn btn-primary mx-auto mt-5" type="submit" value="Place Order">
+       <a href="checkout.html"><input class="btn btn-primary mx-auto mt-5" type="submit" value="Place Order"></a>
     </div>
 
     </div>
