--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizzeria Dela Hoya</title>
 
-
-    <!--Bootstrap CSS-->
+<!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 
     <!--Main CSS-->
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="CSS/index.css" type="text/css" />
 
     <!-- JS Sripts-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
-
-
 </head>
 
 <body>
     <div class="container mt-5">
         <div class="row">
             <div class="col bg-gradient">
-                <h1 class="text-center text-uppercase fw-bolder">Pizzeria Dela Hoya</h1>
+                <h1 class="text-center text-uppercase fw-bolder">
+                    Pizzeria Dela Hoya
+                </h1>
                 <h2 class="text-center fw-bold">Hand tossed Italian goodness</h2>
-                <p class="text-center fst-italic fw-bold">the right slice at the right price</p>
-
+                <p class="text-center fst-italic fw-bold">
+                    the right slice at the right price
+                </p>
             </div>
         </div>
 
@@ -39,88 +39,133 @@
             <div class="col">
                 <div class="card">
                     <img src="https://user-images.githubusercontent.com/66039545/159031318-18cf5787-5cdf-466b-9849-f09887368c30.jpg"
-                     alt="...">
+                        alt="..." />
                     <div class="card-body">
                         <h5 class="card-title text-dark">Pizza</h5>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">It's not just pizza but also a taste of greatness made by top notch Italian chefs </small>
+                        <small class="text-muted">It's not just pizza but also a taste of greatness made by top
+                            notch Italian chefs
+                        </small>
                     </div>
                 </div>
-                 <ul class="list-group mt-2">
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="500" checked aria-label="small">
-                        Small - Kes. 500
-                    </li>
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="800" aria-label="medium">
-                        Medium - Kes. 800
-                    </li>
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="1000" aria-label="large">
-                        Large - Kes. 1000
-                    </li>
-                </ul>
+
+                <select class="form-select mt-2 size" aria-label="Default select example">
+                    <option value="500">Small</option>
+                    <option value="800">Medium</option>
+                    <option value="100">Large</option>
+                </select>
             </div>
             <div class="col">
-                <div class="card ">
+                <div class="card">
                     <img src="https://user-images.githubusercontent.com/66039545/159019716-b9723802-2898-4e52-b368-a635fac31165.jpg"
-                         alt="...">
+                        alt="..." />
                     <div class="card-body">
                         <h5 class="card-title text-dark">Crust</h5>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Check out our selection of delicious crispy pan crust frozen pizzas.</small>
+                        <small class="text-muted">Check out our selection of delicious crispy pan crust frozen
+                            pizzas.</small>
                     </div>
                 </div>
-                 <ul class="list-group mt-2">
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="300" aria-label="crispy">
-                        Crispy - Kes. 300
-                    </li>
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="500" aria-label="stuffed">
-                         Stuffed - Kes. 500
-                    </li>
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="700" aria-label="gluten-free">
-                        Gluten-free - Kes. 700
-                    </li>
-                </ul>
+
+                <select class="form-select mt-2 crust" aria-label="Default select example">
+                    <option value="300">Crispy</option>
+                    <option value="500">Stuffed</option>
+                    <option value="700">Gluten-free</option>
+                </select>
             </div>
             <div class="col">
                 <div class="card">
                     <img src="https://user-images.githubusercontent.com/66039545/159033632-6ada4123-6c89-4f9a-825c-a239198ef5ae.jpg"
-                         alt="...">
+                        alt="..." />
                     <div class="card-body">
                         <h5 class="card-title text-dark">Toppings</h5>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Our pizza come with a selection toppings to match your crust!</small>
+                        <small class="text-muted">Our pizza come with a selection toppings to match your
+                            crust!</small>
                     </div>
                 </div>
-                 <ul class="list-group mt-2">
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="150" aria-label="sausages">
-                        Sausages - Kes. 150
-                    </li>
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="100" aria-label="onions">
-                       Onions - Kes. 100
-                    </li>
-                    <li class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value="200" aria-label="mushrooms">
-                        Mushrooms - Kes. 200
-                    </li>
-                </ul>
+
+                <select class="form-select mt-2 toppings" aria-label="Default select example">
+                    <option value="150">Sausages</option>
+                    <option value="100">Onions</option>
+                    <option value="200">Mushrooms</option>
+                </select>
             </div>
         </div>
         <div class="d-flex justify-content-center">
-       <a href="checkout.html"><input class="btn btn-primary mx-auto mt-5" type="submit" value="Place Order"></a>
+            <input class="btn btn-primary order mx-auto mt-5" type="submit" value="Place Order" />
+        </div>
+        <table class="table mt-3 bg-info">
+            <h2 class="text-center mt-4">Your Order Details</h2>
+            <thead>
+                <tr>
+                    <th scope="col">Order No.</th>
+                    <th scope="col">Pizza Size</th>
+                    <th scope="col">Crust</th>
+                    <th scope="col">Toppings</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody id="pizza">
+                <tr>
+                    <th scope="row">1</th>
+                    <td id="size"></td>
+                    <td id="crust"></td>
+                    <td id="toppings"></td>
+                    <td id="total"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div class="pizza-buttons">
+            <div class="text-center">
+                <button class="btn btn-info more-pizza" type="submit">
+                    Add another pizza
+                </button>
+                <div class="more-info mt-5">
+                    <h3>Your Total is Kes. <span></span></h3>
+                    <h5>
+                        Would you like you pizza to be delivered? You will incur an
+                        additional cost of Kes. <em>300</em>?
+                    </h5>
+
+                    <form class="location text-center" name="location" onsubmit="return false">
+                        <label for="location"></label>
+                        <input type="text" class="mt-5" size="30" placeholder="Enter you address?" required />
+                        <button class="btn btn-info dispatch" type="submit">
+                            Dispatch Rider
+                        </button>
+                    </form>
+
+                    <h4 class="mt-5">
+                        We are preparing your order! Our rider will arrive to
+                        <span></span> in 20 mins.
+                    </h4>
+                </div>
+
+                <button class="btn btn-info deliver" type="submit">Delivery</button>
+                <button class="btn btn-info pickup" type="submit">Pickup</button>
+            </div>
+
+            <div>
+                <button class="btn btn-info check-out float-end" type="submit">
+                    Checkout
+                </button>
+            </div>
+        </div>
+        <h2 id="store">
+            Please pick your order from our store on 2nd Street Uptown
+        </h2>
     </div>
 
+    <div class="card-footer text-center bg-transparent mt-5">
+        <p>Pizzeria Dela Hoya</p>
+        <p>2nd Street Uptown</p>
+        <p>2022</p>
     </div>
-
 </body>
 
 </html>
