git commit will add margin top to delivery and pickup buttons

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </button>
                 <div class="more-info mt-5">
                     <h3>Your Total is Kes. <span></span></h3>
-                    <h5>
+                    <h5 class="mt-4">
                         Would you like you pizza to be delivered? You will incur an
                         additional cost of Kes. <em>300</em>?
                     </h5>
@@ -146,8 +146,8 @@
                     </h4>
                 </div>
 
-                <button class="btn btn-info deliver" type="submit">Delivery</button>
-                <button class="btn btn-info pickup" type="submit">Pickup</button>
+                <button class="btn btn-info deliver mt-3" type="submit">Delivery</button>
+                <button class="btn btn-info pickup mt-3" type="submit">Pickup</button>
             </div>
 
             <div>
