git commit will move dispatch rider button below the address bar and add margin top

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
                     <form class="location text-center" name="location" onsubmit="return false">
                         <label for="location"></label>
-                        <input type="text" class="mt-5" size="30" placeholder="Enter you address?" required />
-                        <button class="btn btn-info dispatch" type="submit">
+                        <input type="text" class="mt-5" size="30" placeholder="Enter you address?" required /> <br>
+                        <button class="btn btn-info dispatch mt-2" type="submit">
                             Dispatch Rider
                         </button>
                     </form>
