git commit will edit bdd in readme file to match program behaviour

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                     <h4 class="mt-5">
                         We are preparing your order! Our rider will arrive to
-                        <span></span> in 20 mins.
+                        <span>?</span> in 20 mins.
                     </h4>
                 </div>
 
