git commit will bold font showing total price

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <button class="btn btn-info more-pizza" type="submit">
                     Add another pizza
                 </button>
-                <div class="more-info mt-5">
-                    <h3>Your Total is Kes. <span></span></h3>
+                <div class="more-info mt-5 ">
+                    <h3 class="fw-bolder">Your Total is Kes. <span></span></h3>
                     <h5 class="mt-4">
                         Would you like you pizza to be delivered? You will incur an
                         additional cost of Kes. <em>300</em>?
