git commit will add footer section

--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
         </h2>
     </div>
 
-    <div class="card-footer text-center bg-transparent mt-5">
+    <div class="card-footer text-center bg-transparent">
         <p>Pizzeria Dela Hoya</p>
         <p>2nd Street Uptown</p>
         <p>2022</p>
+        <footer class="footer"><p>Designed by <a href="https://github.com/FeverCode" target="_blank">FeverCode</a>. &copy; 2022 All Rights Reserved. Pizzeria Dela Hoya.</p></footer>
     </div>
 </body>
 
