--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <p>Pizzeria Dela Hoya</p>
         <p>2nd Street Uptown</p>
         <p>2022</p>
-        <footer class="footer"><p>Designed by <a href="https://github.com/FeverCode" target="_blank">FeverCode</a>. &copy; 2022 All Rights Reserved. Pizzeria Dela Hoya.</p></footer>
+        <footer class="footer mb-3"><p>Designed by <a href="https://github.com/FeverCode" target="_blank">FeverCode</a>. &copy; 2022 All Rights Reserved. Pizzeria Dela Hoya.</p></footer>
     </div>
 </body>
 
