--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizzeria Dela Hoya</title>
 
-<!--Bootstrap CSS-->
+    <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
@@ -134,7 +134,7 @@
 
                     <form class="location text-center" name="location" onsubmit="return false">
                         <label for="location"></label>
-                        <input type="text" class="mt-5" size="30" placeholder="Enter you address?" required /> <br>
+                        <input type="text" class="mt-3" size="30" placeholder="Enter you address?" required /> <br>
                         <button class="btn btn-info dispatch mt-2" type="submit">
                             Dispatch Rider
                         </button>
@@ -160,12 +160,17 @@
             Please pick your order from our store on 2nd Street Uptown
         </h2>
     </div>
-
+    <div class="d-grid d-flex justify-content-center mt-3">
+        <button type="reset" class="reset-btn btn-info" onClick="refreshPage()">Order Again</button>
+    </div>
     <div class="card-footer text-center bg-transparent">
         <p>Pizzeria Dela Hoya</p>
         <p>2nd Street Uptown</p>
         <p>2022</p>
-        <footer class="footer mb-3"><p>Designed by <a href="https://github.com/FeverCode" target="_blank">FeverCode</a>. &copy; 2022 All Rights Reserved. Pizzeria Dela Hoya.</p></footer>
+        <footer class="footer mb-3">
+            <p>Designed by <a href="https://github.com/FeverCode" target="_blank">FeverCode</a>. &copy; 2022 All Rights
+                Reserved. Pizzeria Dela Hoya.</p>
+        </footer>
     </div>
 </body>
 
