--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="container bg-gradient">
         <div class="row">
-            <div class="col bg-gradient">
+            <div class="col">
                 <h1 class="text-center text-uppercase fw-bolder">
                     Pizzeria Dela Hoya
                 </h1>
@@ -143,7 +143,7 @@
                     </form>
 
                     <h4 class="mt-5">
-                        We are preparing your order! Our rider will arrive to
+                        We are preparing your order! <br> Our rider will arrive to
                         <span>?</span> in 20 mins.
                     </h4>
                 </div>
