git commit will fix table size for small devices

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4 ps-5 pe-5">
+        <div class="row row-cols-1 row-cols-md-3 g-3 ps-5 pe-5">
             <div class="col">
                 <div class="card">
                     <img src="https://user-images.githubusercontent.com/66039545/159031318-18cf5787-5cdf-466b-9849-f09887368c30.jpg"
@@ -102,7 +102,8 @@
 
         <section>
             <div class="container">
-                <table class="table mt-3 bg-info">
+                <div class="row">
+                <table class="table table-sm mt-3 bg-info">
                     <h2 class="text-center mt-4">Your Order Details</h2>
                     <thead>
                         <tr>
