git commit will reduce maps search bar to fit mobile devices and prevent overflow

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <form class="location text-center" name="location" onsubmit="return false">
                         <label for="location"></label>
-                        <input id="pac-input" class="controls" type="text" placeholder="Search Box" required/> <br>
+                        <input id="pac-input" class="controls" size="30"  type="text" placeholder="Search Box" required/> <br>
                         <div id="map"></div>
                         <iframe loading="lazy" allowfullscreen
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBekeUdjjZXgAVVKzB4GQlORCSji60jz7c&q=Space+Needle,Seattle+WA">
