--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- JS Sripts-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-        <script src="/JS/map.js"></script>
+        <script src="./JS/map.js"></script>
     <script src="./JS/script.js"></script>
 </head>
 
@@ -114,7 +114,7 @@
                             <th scope="col">Total</th>
                         </tr>
                     </thead>
-                    <tbody id="pizza">
+                    <tbody id="newPizza">
                         <tr>
                             <th scope="row">1</th>
                             <td id="size"></td>
