git commit corrected typo in index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="more-info mt-3">
                     <h3 class="fw-bolder">Your Total is Kes. <span></span></h3>
                     <h5 class="mt-4">
-                        Would you like you pizza to be delivered? You will incur an
+                        Would you like your order to be delivered? You will incur an
                         additional cost of Kes. <em>300</em>?
                     </h5>
 
